[package]
name = "embedded-exp"
version = "0.3.0"
edition = "2024"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
license = "GPL-2.0-or-later"
description = "Exponentielle valeurs neégatives en virgule fixe Q15 pour systèmes embarqués `no_std`, zéro dépendance"
repository = "https://github.com/jorgeandrecastro/embedded-exp"
documentation = "https://docs.rs/embedded-exp"
readme = "README.md"
keywords = ["fixed-point", "math", "no-std", "exponential"]
categories = ["mathematics", "no-std", "embedded"]


[profile.release]
opt-level = "z"     
lto = true           # Link-Time Optimization pour de meilleures performances
codegen-units = 1    
panic = "abort"      # Indispensable pour un environnement sans OS (no_std)
strip = true         # Nettoyage des symboles pour réduire le poids